@@ -13,6 +13,9 @@ to compute matrices of Pearson or Spearman correlations along with
 the pairwise p-values among the correlations. The p-values are corrected
 for multiple inference using Holm's method (see \code{\link[stats]{p.adjust}}).
 Observations are filtered for missing data, and only complete observations are used.
+
+The \code{\link{partial.cor}} function may similarly be used to get p-values and
+adjusted p-values for partial correlations.
 }
 
 \usage{
@@ -40,7 +43,7 @@ John Fox, adapting code from Robert A. Muenchen.
 }
 
 \seealso{
-\code{\link[Hmisc]{rcorr}}, \code{\link[stats]{p.adjust}}.
+\code{\link[Hmisc]{rcorr}}, \code{\link[stats]{p.adjust}}, \code{\link{partial.cor}}.
 }
 
 \examples{
